--- a/src/app.html
+++ b/src/app.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<link rel="alternate" type="application/atom+xml" href="/rss.xml" />
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
+		<script type="module">
+			const theme = localStorage.getItem('color-scheme')
+
+			theme
+				? document.documentElement.setAttribute('color-scheme', theme)
+				: localStorage.setItem('color-scheme', 'dark')
+		</script>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
